# playos-samples

./: AGENTS.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: build.yml
build-wayland/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  hello-playos
build-wayland/_playos/playos-platform-api/: cmake_install.cmake
hello-playos/src/: main.cpp
space-invaders/src/: main.cpp
